2004-09-06 Slade Rich <slade_rich AT users.sourceforge.net>

	* Bug fixes for PIC14 - signed RSHIFT problem. Patch supplied by Allen(agschrum).

2004-09-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/port.h,
	* src/mcs51/main.c,
	* src/ds390/main.c,
	* src/z80/main.c,
	* src/hc08/main.c,
	* src/pic/main.c,
	* src/pic16/main.c,
	* src/avr/main.c,
	* src/xa51/main.c
	* src/SDCCicode.c (geniCodeJumpTable): Better logic to determine if a
	a jump table is the best form for a switch statement, including
	automatic insertion of missing cases to make the case range
	continuous. Developed in collaboration with Frieder Ferlemann.

2004-09-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/ralloc.c (canDefAccResult): multi-byte shift is unsafe for
	accumulator result if it needs sign extension

2004-09-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/hc08/ralloc.c (canUseAccOperand): fixed comparison bug

2004-09-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/gbz80/printf.c,
	* device/lib/z80/printf.c: removed define for NULL

2004-09-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/xa51/xa_link.c,
	* device/examples/ds390/ow390/ad26.c,
	* device/examples/ds390/ow390/cnt1d.c,
	* device/examples/ds390/ow390/counter.c,
	* device/examples/ds390/ow390/ds2480.h,
	* device/examples/ds390/ow390/ds2480ut.c,
	* device/examples/ds390/ow390/findtype.c,
	* device/examples/ds390/ow390/gethumd.c,
	* device/examples/ds390/ow390/owllu.c,
	* device/examples/ds390/ow390/ownetu.c,
	* device/examples/ds390/ow390/swt12.c,
	* device/examples/ds390/ow390/swtloop.c,
	* device/examples/ds390/ow390/temp.c,
	* device/examples/ds390/ow390/temp10.c,
	* device/examples/ds390/ow390/thermo21.c,
	* device/examples/ds390/ow390/tinilnk.c,
	* device/examples/ds390/ow390/tstfind.c,
	* device/examples/serialcomm/windows/serial.cpp,
	* device/examples/serialcomm/windows/test_serialcomm.cpp,
	* device/include/reg51.h: fixed line endings for cvs
